# ragmacs-cli

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml  ragmacs-cli  ragmacs-cli-0.1.0.r23.g0e26e61-1-any.pkg.tar.zst  ragmacs_cli.py
.github/workflows/: ci.yml  drift-detection.yml  package-drift.yml  release.yml
ragmacs-skill/: SKILL.md
src/ragmacs_cli/: core.py
tests/: test_cli_contract.py  test_core.py
