[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragmacs-cli"
version = "0.1.0"
description = "Command-line wrapper for ragmacs Emacs functions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "0BSD"}
classifiers = [
  "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
]

[dependency-groups]
dev = []

[project.scripts]
ragmacs-cli = "ragmacs_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
