[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragmacs-cli"
version = "0.1.0"
description = "Command-line wrapper for ragmacs Emacs functions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "0BSD"}
classifiers = [
  "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[project.scripts]
ragmacs-cli = "ragmacs_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src/ragmacs_cli"]
strict = true
