[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragmacs-cli"
version = "0.1.0"
description = "Command-line wrapper for ragmacs Emacs functions"
readme = "README.md"
requires-python = ">=3.13"
license = "0BSD"
license-files = ["LICENSE"]
classifiers = [
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[project.scripts]
ragmacs = "ragmacs_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
files = ["src/ragmacs_cli"]
strict = true
